--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <ul>
-    <li> <a href="pages/star.html">Stars</a> </li>
-    <li> <a href="pages/hex.html">Hex Grid</a> </li>
-  </ul>
+  <div>
+    <div><h2>Lessons</h2></div>
+    <div>
+      <ul>
+        <li> <a href="lessons/prek.html" target="_blank">Pre-K</a> </li>
+      </ul>
+    </div>
+    <div><h2>Pages</h2></div>
+    <div>
+      <ul>
+        <li> <a href="pages/star.html" target="_blank">Stars</a> </li>
+        <li> <a href="pages/hex.html" target="_blank">Hex Grid</a> </li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
