--- a/lessons/prek.html
+++ b/lessons/prek.html
@@ -4,144 +4,162 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<div style="width:600px">
-  <p><b>Intro:</b></p>
+<div style="width:800px">
+  <div>
+    <div><h3>Intro:</h3></div>
 
-  <p>Hi everybody i’m zoe’s dad and we’re going to talk about computers today. A computer is a machine that listens
-    to and follows instructions. I’m a computer programmer, which means that I write the instructions for the computer
-    to follow. It’s harder than it sounds because computers only understand a few instructions, so if you want it to
-    do what you want, you have to tell it a lot of instructions. If you give the computer instructions that don’t
-    make sense, or that it doesn’t understand, the computer can break, and you have to start it all over! Luckily
-    it can follow instructions very very quickly! If you give the computer a lot of instructions it can draw a
-    picture or make a sound. And if you give it a lot of instructions to draw pictures and make sounds it can
-    even make a video game.</p>
+    <div>Hi everybody i’m zoe’s dad and we’re going to talk about computers today. A computer is a machine that listens
+      to and follows instructions. I’m a computer programmer, which means that I write the instructions for the computer
+      to follow. It’s harder than it sounds because computers only understand a few instructions, so if you want it to
+      do what you want, you have to tell it a lot of instructions. If you give the computer instructions that don’t
+      make sense, or that it doesn’t understand, the computer can break, and you have to start it all over! Luckily
+      it can follow instructions very very quickly! If you give the computer a lot of instructions it can draw a
+      picture or make a sound. And if you give it a lot of instructions to draw pictures and make sounds it can
+      even make a video game.</div>
+  </div>
 
-  <p><b>Following Instructions Game:</b></p>
+  <div>
+    <div><h3>Following Instructions Game:</h3></div>
 
-  <p>(In a circle) So now we’re going to pretend to be robots. Since robots have computers for brains, they
-    follow instructions. But you guys are pretty smart robots so you understand a lot of different instructions.
-    The only thing is that you only understand them if they start with “Hey Robot!”. So if I say “Hey Robot! Jump
-    up and down”, because you’re a robot you can follow the instruction. But if I just say “Jump up and down”, you
-    have to say “DOES NOT COMPUTE!”. If I catch you accidentally following an instruction that you don’t
-    understand, or if you don’t say “DOES NOT COMPUTE!” then you have to restart your computer brain by running
-    around the circle back to your place.</p>
+    <div>(In a circle) So now we’re going to pretend to be robots. Since robots have computers for brains, they
+      follow instructions. But you guys are pretty smart robots so you understand a lot of different instructions.
+      The only thing is that you only understand them if they start with “Hey Robot!”. So if I say “Hey Robot! Jump
+      up and down”, because you’re a robot you can follow the instruction. But if I just say “Jump up and down”, you
+      have to say (robot voice) “DOES NOT COMPUTE!”. If I catch you accidentally following an instruction that
+      you don’t understand, or if you don’t say “DOES NOT COMPUTE!” then you have to restart your computer brain
+      by running around the circle back to your place.</div>
 
-  <ol>
-    <li> Hey Robot, jump up and down
-    <li> Hey Robot, touch your toes
-    <li> Hey Robot, put your hands on your head
-    <li> Put your hands on your knees (DOES NOT COMPUTE)
-    <li> Hey Robot, sit down with legs out
-    <li> Hey Robot, stand up
-    <li> Hey Robot, sit down with legs crossed
-    <li> Stand up (DOES NOT COMPUTE)
-    <li> Lay down (DOES NOT COMPUTE)
-    <li> Hey Robot, jump all the way up
-    <li> Hey Robot, do a robot dance
-    <li> Say DOES NOT COMPUTE (DOES NOT COMPUTE!!!!)
-  </ol>
+    <ol>
+      <li> Hey Robot, jump up and down
+      <li> Hey Robot, touch your toes
+      <li> Hey Robot, put your hands on your head
+      <li> Put your hands on your knees (DOES NOT COMPUTE)
+      <li> Hey Robot, sit down with legs out
+      <li> Hey Robot, stand up
+      <li> Hey Robot, sit down with legs crossed
+      <li> Stand up (DOES NOT COMPUTE)
+      <li> Lay down (DOES NOT COMPUTE)
+      <li> Hey Robot, jump all the way up
+      <li> Hey Robot, do a robot dance
+      <li> Say DOES NOT COMPUTE (DOES NOT COMPUTE!!!!)
+    </ol>
 
-  <p><b>Giving Instructions Game:</b></p>
+    <div>Whoa, that last one is a tough one! What do we do?? If we say it DOES NOT COMPUTE, then we're following
+      the instruction, which we're not supposed to do! I think we all have to restart!</div>
+  </div>
 
-  <p>(In a circle, put a box in one place and a chair in another then go stand in a third place) Now it’s
-    your turn to tell a robot what to do. And I am the robot. But I’m not as smart a robot as you were. I
-    only know FOUR instructions: step forward, turn right, pick up, and put down (you don’t need to say “Hey
-    Robot”). The job you want me to do is to move that very heavy box over there to the chair over there. But
-    you can’t just say “pick up that box and put it over there on the chair”. You have to tell me one instruction
-    at a time, and the only things I understand are: step forward, turn right, pick up, and put down. You each get
-    to take a turn giving me one instruction and see if all of the instructions you give me can make me pick up the
-    box and put it on the chair. If you give me an instruction I don’t understand, or if something else goes wrong,
-    I will say “DOES NOT COMPUTE!” and start over by returning to where I started!</p>
+  <div>
+    <div><h3>Giving Instructions Game:</h3></div>
 
-  <p>(play game. Maybe the adults give hints)</p>
+    <div>(In a circle, put a box in one place and a chair in another then go stand in a third place) Now it’s
+      your turn to tell a robot what to do. And I am the robot. But I’m not as smart a robot as you were. I
+      only know FOUR instructions: step forward, turn right, pick up, and put down (you don’t need to say “Hey
+      Robot”). The job you want me to do is to move that very heavy box over there to the chair over there. But
+      you can’t just say “pick up that box and put it over there on the chair”. You have to tell me one instruction
+      at a time, and the only things I understand are: step forward, turn right, pick up, and put down. You each get
+      to take a turn giving me one instruction and see if all of the instructions you give me can make me pick up the
+      box and put it on the chair. If you give me an instruction I don’t understand, or if something else goes wrong,
+      I will say “DOES NOT COMPUTE!” and start over by returning to where I started!</div>
 
-  <p>Ok, now the box is on the chair and I’m going to stop pretending to be a robot. Let’s see what’s in the box!</p>
+    <div style="margin-top:20px">(play game. Maybe the adults give hints)</div>
 
-  <p><b>Another Following Instruction Game:</b></p>
+    <div style="margin-top:20px">Ok, now the box is on the chair and I’m going to stop pretending to be a robot.
+      Let’s see what’s in the box!</div>
+  </div>
 
-  <p>(In the box is a pile of paper with numbered points on them in the shape of a pentagon, a hexagon,
-    and an octogon, and a marker for each child) We’re going to do another game where we do something that
-    computers can do: draw shapes. Today we are going to draw a few different kinds of stars. This is like
-    a connect the dot, but instead of going 1, 2, 3, 4, 5, we’re going to listen to the instructions and draw
-    the lines between the numbers in the instructions.</p>
+  <div>
+    <div><h3>Another Following Instruction Game:</h3></div>
 
-  <p>Let’s start with the five points. Open your markers and follow these instructions:</p>
-  <ol>
-    <li>Draw a line from 1 to 3
-    <li>Draw a line from 3 to 5
-    <li>Draw a line from 5 to 2
-    <li>Draw a line from 2 to 4
-    <li>Draw a line from 4 to 1
-  </ol>
-  <p>What shape did we make? (a 5 pointed star!) We drew a star with 5 points by starting the line at one point,
-    skipping a point, and drawing to the next point.</p>
+    <div>(In the box is a pile of paper with numbered points on them in the shape of a pentagon, a hexagon,
+      and an octogon, and a marker for each child) We’re going to do another game where we do something that
+      computers can do: draw shapes. Today we are going to draw a few different kinds of stars. This is like
+      a connect the dot, but instead of going 1, 2, 3, 4, 5, we’re going to listen to the instructions and draw
+      the lines between the numbers in the instructions.</div>
 
-  <p>Now the next shape:</p>
-  <ol>
-    <li>Draw a line from 1 to 5
-    <li>Draw a line from 5 to 3
-    <li>Draw a line from 3 to 1
-    <li>Draw a line from 2 to 6
-    <li>Draw a line from 6 to 4
-    <li>Draw a line from 4 to 2
-  </ol>
-  <p>What shape did we make? (a 6 pointed star!) We drew a star with 6 points by starting the line at one
-    point, skipping 4 points! and drawing to the next point</p>
+    <div style="margin-top:20px">Let’s start with the five points. Open your markers and follow
+      these instructions:</div>
+    <ol>
+      <li>Draw a line from 1 to 3
+      <li>Draw a line from 3 to 5
+      <li>Draw a line from 5 to 2
+      <li>Draw a line from 2 to 4
+      <li>Draw a line from 4 to 1
+    </ol>
+    <div>What shape did we make? (a 5 pointed star!) We drew a star with 5 points by starting the line at one point,
+      skipping a point, and drawing to the next point.</div>
 
-  <p>Now the last shape:</p>
-  <ol>
-    <li>Draw a line from 1 to 5
-    <li>Draw a line from 2 to 6
-    <li>Draw a line from 3 to 7
-    <li>Draw a line from 4 to 8
-  </ol>
-  <p>What shape did we make? (an asterisk! Which is an 8 pointed star that meets in the middle) We drew a star
-    with 8 points by starting the line at one point, skipping 4 points, and drawing to the next point. That’s
-    the same number we skipped when we drew the 6 pointed star, but look at how different the stars look!</p>
+    <div style="margin-top:20px">Now the next shape:</div>
+    <ol>
+      <li>Draw a line from 1 to 5
+      <li>Draw a line from 5 to 3
+      <li>Draw a line from 3 to 1
+      <li>Draw a line from 2 to 6
+      <li>Draw a line from 6 to 4
+      <li>Draw a line from 4 to 2
+    </ol>
+    <div>What shape did we make? (a 6 pointed star!) We drew a star with 6 points by starting the line at one
+      point, skipping 4 points! and drawing to the next point</div>
 
-  <p><b>Now A Demo:</b></p>
+    <div style="margin-top:20px">Now the last shape:</div>
+    <ol>
+      <li>Draw a line from 1 to 5
+      <li>Draw a line from 2 to 6
+      <li>Draw a line from 3 to 7
+      <li>Draw a line from 4 to 8
+    </ol>
+    <div>What shape did we make? (an asterisk! Which is an 8 pointed star that meets in the middle) We drew a star
+      with 8 points by starting the line at one point, skipping 4 points, and drawing to the next point. That’s
+      the same number we skipped when we drew the 6 pointed star, but look at how different the stars look!</div>
+  </div>
 
-  <p>Computers are very good at following instructions, so let’s take a look at a program I wrote that let’s
-    you tell the computer any number of points in the star and any number of points to skip when drawing lines.
-    (<a href="http://nfolkert.github.io/toys/pages/star.html">nfolkert.github.io/toys/pages/star.html</a>)</p>
+  <div>
+    <div><h3>Now A Demo:</h3></div>
 
-  <p>Here’s the 5 pointed star where we skipped 1:</p>
-  <p><a href="http://nfolkert.github.io/toys/pages/star.html?points=5&increment=2">nfolkert.github.io/toys/pages/star.html?points=5&increment=2</a>
-  </p>
+    <div>Computers are very good at following instructions, so let’s take a look at a program I wrote that let’s
+      you tell the computer any number of points in the star and any number of points to skip when drawing lines.
+      (<a href="http://nfolkert.github.io/toys/pages/star.html">nfolkert.github.io/toys/pages/star.html</a>)</div>
 
-  <p>Here’s the 6 pointed star where we skipped 4:</p>
-  <p><a href="http://nfolkert.github.io/toys/pages/star.html?points=6&increment=4">nfolkert.github.io/toys/pages/star.html?points=6&increment=4</a>
-  </p>
+    <div style="margin-top:20px">Here’s the 5 pointed star where we skipped 1:</div>
+    <div><a href="http://nfolkert.github.io/toys/pages/star.html?points=5&increment=2">nfolkert.github.io/toys/pages/star.html?points=5&increment=2</a>
+    </div>
 
-  <p>Here’s the 8 pointed star where we skipped 4:</p>
-  <p><a href="http://nfolkert.github.io/toys/pages/star.html?points=8&increment=4">nfolkert.github.io/toys/pages/star.html?points=8&increment=4</a>
-  </p>
+    <div style="margin-top:20px">Here’s the 6 pointed star where we skipped 4:</div>
+    <div><a href="http://nfolkert.github.io/toys/pages/star.html?points=6&increment=4">nfolkert.github.io/toys/pages/star.html?points=6&increment=4</a>
+    </div>
 
-  <p>The computer is so fast, we can have it draw more than one line for each point. Here’s what happens if
-    we have it draw the 8 pointed star, but 4 lines from each point instead of just 1:</p>
-  <p><a href="http://nfolkert.github.io/toys/pages/star.html?points=8&rays=4&increment=1">nfolkert.github.io/toys/pages/star.html?points=8&rays=4&increment=1</a>
-  </p>
+    <div style="margin-top:20px">Here’s the 8 pointed star where we skipped 4:</div>
+    <div><a href="http://nfolkert.github.io/toys/pages/star.html?points=8&increment=4">nfolkert.github.io/toys/pages/star.html?points=8&increment=4</a>
+    </div>
 
-  <p>What if we wanted to draw a star with 100 points skipping up 43 points at a time?!:</p>
-  <p><a href="http://nfolkert.github.io/toys/pages/star.html?points=100&increment=43">nfolkert.github.io/toys/pages/star.html?points=100&increment=43</a>
-  </p>
+    <div style="margin-top:20px">The computer is so fast, we can have it draw more than one line for each point.
+      Here’s what happens if we have it draw the 8 pointed star, but 4 lines from each point instead of just 1:</div>
+    <div><a href="http://nfolkert.github.io/toys/pages/star.html?points=8&rays=4&increment=1">nfolkert.github.io/toys/pages/star.html?points=8&rays=4&increment=1</a>
+    </div>
 
-  <p>What if we wanted to draw a star with 200 points, skipping up 99 points at a time and with 99 lines
-    from each point???! The computer can do it easy!:</p>
-  <p><a href="http://nfolkert.github.io/toys/pages/star.html?points=200&increment=99&rays=99">nfolkert.github.io/toys/pages/star.html?points=200&increment=99&rays=99</a>
-  </p>
-  <p>But it has so many lines and so many points that to us it just looks like a circle!</p>
+    <div style="margin-top:20px">What if we wanted to draw a star with 100 points skipping up 43
+      points at a time?!:</div>
+    <div><a href="http://nfolkert.github.io/toys/pages/star.html?points=100&increment=43">nfolkert.github.io/toys/pages/star.html?points=100&increment=43</a>
+    </div>
 
-  <p><b>Project Time!</b></p>
-  <p>Okay, enough about computers and stars. Now it’s time to build robots. But building a real robot is
-    very hard, and programming the robot to do something is even harder -- it takes hundreds of grown ups
-    to do that kind of thing! Instead we’re going to build a pretend robot. But so it is useful like a
-    regular robot, we’re going to build a pretend robot that we can eat!</p>
+    <div style="margin-top:20px">What if we wanted to draw a star with 200 points, skipping up
+      99 points at a time and with 99 lines from each point???! The computer can do it easy!:</div>
+    <div><a href="http://nfolkert.github.io/toys/pages/star.html?points=200&increment=99&rays=99">nfolkert.github.io/toys/pages/star.html?points=200&increment=99&rays=99</a>
+    </div>
+    <div>But it has so many lines and so many points that to us it just looks like a circle!</div>
+  </div>
 
-  <p>(Get out “robot” materials: juice box body, apple sauce head, googly eyes, candy arms, raisin box feet.
-    Every kid gets one juice box, one apple sauce, 2 candy arms, 2 raisin box feet, a spoon, and as many
-    googly eyes as they want. We’ll bring double sided and single sided sticky tape to put together the body,
-    but we’ll need a daub of glue or glue stick to hold on the googly eyes.)</p>
+  <div>
+    <div><h3>Project Time!</h3></div>
+    <div>Okay, enough about computers and stars. Now it’s time to build robots. But building a real robot is
+      very hard, and programming the robot to do something is even harder -- it takes hundreds of grown ups
+      to do that kind of thing! Instead we’re going to build a pretend robot. But so it is useful like a
+      regular robot, we’re going to build a pretend robot that we can eat!</div>
+
+    <div style="margin-top:20px">(Get out “robot” materials: juice box body, apple sauce head, googly eyes,
+      candy arms, raisin box feet. Every kid gets one juice box, one apple sauce, 2 candy arms, 2 raisin box
+      feet, a spoon, and as many googly eyes as they want. We’ll bring double sided and single sided sticky
+      tape to put together the body, but we’ll need a daub of glue or glue stick to hold on the googly eyes.)</div>
+  </div>
 </div>
 </body>
 </html>
