Add a little blurb about robots

--- a/lessons/prek.html
+++ b/lessons/prek.html
@@ -8,7 +8,7 @@
   <div>
     <div><h3>Intro:</h3></div>
 
-    <div>Hi everybody i’m zoe’s dad and we’re going to talk about computers today. A computer is a machine that listens
+    <div>Hi everybody i’m zoe’s dad and we’re going to talk about computers today. A computer is a device that listens
       to and follows instructions. I’m a computer programmer, which means that I write the instructions for the computer
       to follow. It’s harder than it sounds because computers only understand a few instructions, so if you want it to
       do what you want, you have to tell it a lot of instructions. If you give the computer instructions that don’t
@@ -16,6 +16,11 @@
       it can follow instructions very very quickly! If you give the computer a lot of instructions it can draw a
       picture or make a sound. And if you give it a lot of instructions to draw pictures and make sounds it can
       even make a video game.</div>
+
+    <div style="margin-top:20px">Now we're also gonna talk a little about robots. Robots are machines that instead of
+      being controlled by a person is controlled by a computer. It has a computer brain. But the robot's computer
+      brain is just like a regular computer: you have to give the computer instructions on how to do anything, and
+      the computer tells the robot what to do.</div>
   </div>
 
   <div>
