--- a/lessons/prek.html
+++ b/lessons/prek.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<div style="width:800px">
+<div style="max-width:800px">
   <div>
     <div><h3>Intro:</h3></div>
 
